# rov-ros-control

./: README.md  sample_1.txt  simple_ui_form.py
XDG_CACHE_HOME/Microsoft/Python Language Server/stubs.v1/B_sSQqUf7PGbxdyqbf5LxSp9Nhbjd_iTNXYhU8Pj3kY=/: fftpack_lite.cpython-35m-x86_64-linux-gnu.pyi
XDG_CACHE_HOME/Microsoft/Python Language Server/stubs.v1/G3w_LA_J3Pg3Whanj-JetlBEirVgz4N_deuKWyWOGtg=/: mtrand.cpython-35m-x86_64-linux-gnu.pyi
XDG_CACHE_HOME/Microsoft/Python Language Server/stubs.v1/M2KcDmVDYL_Yq1CJMCom4n3OUETWJLIvUfy8ZvHg0Zw=/: python3._pickle.pyi  python3.array.pyi  python3.time.pyi  python3.unicodedata.pyi
XDG_CACHE_HOME/Microsoft/Python Language Server/stubs.v1/O9zdajvkrEw9tjI_A4a24TxBTVROVRT5bLz9KUEeqWs=/: _multiarray_tests.cpython-35m-x86_64-linux-gnu.pyi  _multiarray_umath.cpython-35m-x86_64-linux-gnu.pyi
XDG_CACHE_HOME/Microsoft/Python Language Server/stubs.v1/QmTNWiXzvteh9pgcnZSjiEIaUcAxOXsydYvnoqjbqGo=/: _umath_linalg.cpython-35m-x86_64-linux-gnu.pyi  lapack_lite.cpython-35m-x86_64-linux-gnu.pyi
XDG_CACHE_HOME/Microsoft/Python Language Server/stubs.v1/_xBu6tbJdTZxamjScU_3N0CF15AR5V7N9u8PVUCkcOI=/: cv2.cpython-35m-x86_64-linux-gnu.pyi
XDG_CACHE_HOME/Microsoft/Python Language Server/stubs.v1/lxZFQG_YCJATvcHJZPT3KS4tVSXSHe9W0opaD3PnDKQ=/: apt_pkg.cpython-35m-x86_64-linux-gnu.pyi
XDG_CACHE_HOME/Microsoft/Python Language Server/stubs.v1/pN9YYFIYlUhekgMOza1dK-4eIOP-6apcgO8zw0HnZQk=/: _ctypes.cpython-35m-x86_64-linux-gnu.pyi  _curses.cpython-35m-x86_64-linux-gnu.pyi  _decimal.cpython-35m-x86_64-linux-gnu.pyi  _json.cpython-35m-x86_64-linux-gnu.pyi  _multiprocessing.cpython-35m-x86_64-linux-gnu.pyi  mmap.cpython-35m-x86_64-linux-gnu.pyi
devel/: .catkin  .rosinstall  setup.sh
devel/include/GUI/: Num.h  cannonNumbers.h  motors.h
devel/include/depth_pid/: PidConfig.h
devel/include/distributor/: rov_msgs.h
devel/include/pid/: PidConfig.h
devel/include/pitch_pid/: PidConfig.h
devel/include/yaw_pid/: PidConfig.h
devel/lib/communication/: commincpp  commoutcpp
devel/lib/depth_pid/: depth_autotune  depth_controller  depth_plant_sim  depth_setpoint_node  depth_sim_time
devel/lib/distributor/: distributor_node
devel/lib/motion_map/: map_motors  map_motors_ps3
devel/lib/motors/: motorscpp
devel/lib/pid/: autotune  controller  plant_sim  setpoint_node  sim_time
devel/lib/pitch_pid/: pitch_autotune  pitch_controller  pitch_plant_sim  pitch_setpoint_node  pitch_sim_time
devel/lib/pkgconfig/: GUI.pc  communication.pc  depth_pid.pc  distributor.pc  line_follower_node.pc  motion_map.pc  motors.pc  pid.pc  pitch_pid.pc  serial.pc  serial_example.pc  video_stream_opencv.pc  yaw_pid.pc
devel/lib/python2.7/dist-packages/GUI/msg/: _Num.py  __init__.py  _cannonNumbers.py  _motors.py
devel/lib/python2.7/dist-packages/depth_pid/cfg/: PidConfig.py
devel/lib/serial/: serial_example
devel/lib/serial_example/: second_serial_node  serial_example_node
devel/lib/video_stream_opencv/: video_stream
devel/lib/yaw_pid/: yaw_autotune  yaw_controller  yaw_plant_sim  yaw_setpoint_node  yaw_sim_time
devel/share/GUI/cmake/: GUI-msg-paths.cmake  GUIConfig.cmake
devel/share/common-lisp/ros/GUI/msg/: GUI-msg.asd  (+7 more)
devel/share/communication/cmake/: communicationConfig.cmake
devel/share/depth_pid/cmake/: depth_pidConfig.cmake
devel/share/distributor/cmake/: distributor-msg-extras.cmake  distributor-msg-paths.cmake  distributorConfig.cmake
devel/share/line_follower_node/cmake/: line_follower_nodeConfig.cmake
devel/share/motion_map/cmake/: motion_map-msg-paths.cmake  motion_mapConfig.cmake
devel/share/motors/cmake/: motorsConfig.cmake
devel/share/pid/cmake/: pidConfig.cmake
devel/share/pitch_pid/cmake/: pitch_pidConfig.cmake
devel/share/roseus/ros/GUI/: manifest.l
devel/share/roseus/ros/distributor/: manifest.l
devel/share/roseus/ros/motion_map/: manifest.l
devel/share/roseus/ros/serial_example/: manifest.l
devel/share/serial/cmake/: serialConfig.cmake
devel/share/serial_example/cmake/: serial_example-msg-paths.cmake  serial_exampleConfig.cmake
devel/share/video_stream_opencv/cmake/: video_stream_opencvConfig.cmake
devel/share/yaw_pid/cmake/: yaw_pidConfig.cmake
src/GUI/: CMakeLists.txt  package.xml
src/GUI/desktop/: gui_launcher.desktop.in
src/GUI/launch/: gui_launcher.launch
src/GUI/msg/: Num.msg  cannonNumbers.msg  motors.msg
src/GUI/scripts/: camera_node.py  cannon_calculations.py  cannon_mission.py  cannon_mission_usb.py  cannon_mission_usb0.py  cannon_usb_screenshot_all.py  cannon_usb_screenshot_all_2.py  gui_main.py  line_driver_file.py  line_process_usb_cam.py  reigonal_species.py  reigonal_species_ip.py  ros_image_subscriber.py  sample_1.txt  sample_train_file.py  shapesPreFinal.py  shapes_detection.py  shapes_detection_new.py  simple_ui_form.py  simple_ui_form.ui
src/GUI/temp_files/: simple_ui_form.py
src/communication/: CMakeLists.txt  package.xml
src/communication/src/: _communication.cpp.swp  comm_old_ethernet.cpp  commin.cpp  commout.cpp  exe
src/depth_pid/: CMakeLists.txt  package.xml
src/depth_pid/include/pid/: pid.h
src/depth_pid/src/: depth_controller.cpp  depth_pid.cpp
src/distributor/: CMakeLists.txt
src/distributor/msg/: rov_msgs.msg
src/distributor/src/: distributor_node.cpp
src/line_follower_node/: CMakeLists.txt  package.xml
src/line_follower_node/scripts/: img_process.py  serial_arduino.py  simple_publisher.py  simple_subsc.py
src/line_follower_node/scripts/trials/: osama_code.cpp  resize_window.py
src/motion_map/: CMakeLists.txt
src/motion_map/launch/: launch_node.launch  launch_with_pid.launch  read_and_write.launch
src/motion_map/src/: map_motors.cpp  map_motors_ps3.cpp
src/motors/: CMakeLists.txt
src/motors/src/: motors.cpp
src/pitch_pid/: CMakeLists.txt
src/pitch_pid/src/: pitch_controller.cpp  pitch_pid.cpp
src/serial_example_master/: CMakeLists.txt
src/serial_example_master/src/: second_serial_node.cpp  serial_example_node.cpp
src/yaw_pid/: CMakeLists.txt
src/yaw_pid/include/pid/: pid.h
src/yaw_pid/src/: yaw_controller.cpp  yaw_pid.cpp
(+19 files in other folders)
